--- a/source/_posts/2012-12-15-Day-One.md
+++ b/source/_posts/2012-12-15-Day-One.md
@@ -6,6 +6,8 @@ comments: true
 categories: "Mac"
 ---
 
+<center><img alt="Day One icon" src="https://raw.githubusercontent.com/haohailong/imagebed/master/20121215-Day-One.png" width="256" height="256" /></center>
+
 小学二年级的时候，老师开始强迫我们写日记。就我个人而言，懂事之前被强迫做的事情，绝大多数后来都放弃了。即使重新拣起来，也基本上要等到懂事之后过很长时间，并且认真考虑过这件事情的价值之后，比如[记笔记](http://haohailong.net/archives/294)。
 
 写日记的习惯却断断续续的坚持下来了，我想这主要是因为我的父亲也有写日记的习惯，教育小孩，永远是「言传不如身教」。但这篇文章我想说的正是这断断续续中断的部分。
